--- a/splicing.html
+++ b/splicing.html
@@ -6,9 +6,9 @@
 	<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 	<meta name=viewport content="width=device-width,initial-scale=1">
 	<link rel="icon" href="https://cdn.jsdelivr.net/gh/renzhezhilu/webp2jpg-online/cdn/splicing/favicon.png">
-	<title>视频字幕拼接工具</title>
+	<title>Video subtitle splicing tool</title>
 		<meta name=description
-        content="视频字幕拼接工具,和一些常规的图片拼接功能">
+        content="Video subtitle splicing tool, and some regular picture splicing functions">
     <meta name=author content=renzhezhilu,https://github.com/renzhezhilu/webp2jpg-online>
     <meta name=keywords
 		content="字幕拼接,长图拼接,图片多列拼接,录屏拼接">
